# shadow-cli

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  book.toml
.github/: pr-title-checker-config.json
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: pr-title-checker.yml  release.yml  test-rs.yml
a/: foundry.toml  info.json  settings.json  source.json
a/cache/: solidity-files-cache.json
crates/clone/: Cargo.toml
crates/clone/src/: lib.rs
crates/clone/src/core/: mod.rs
crates/clone/src/interface/: args.rs
crates/clone/src/utils/: ipfs.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/interface/: contract.rs  group.rs  mod.rs
crates/common/src/utils/: blockscout.rs  compiler.rs  db.rs  env.rs  forge.rs  mod.rs  state.rs  version.rs
crates/common/templates/: README.md
crates/compile/: Cargo.toml
crates/compile/src/: lib.rs
crates/compile/src/core/: mod.rs
crates/compile/src/interface/: args.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/config/src/core/: mod.rs
crates/config/src/interface/: args.rs  config.rs
crates/config/src/utils/: constants.rs  mod.rs
crates/fetch/: Cargo.toml
crates/fetch/src/: lib.rs
crates/fetch/src/core/: mod.rs
crates/fetch/src/interface/: args.rs
crates/init/: Cargo.toml
crates/init/src/: lib.rs
crates/init/src/core/: mod.rs
crates/init/src/interface/: args.rs
crates/push/: Cargo.toml
crates/push/src/core/: mod.rs
crates/push/src/interface/: args.rs
crates/push/src/utils/: eas.rs  http.rs  ipfs.rs  mod.rs
crates/simulate/: Cargo.toml
crates/simulate/src/: lib.rs
crates/simulate/src/core/: mod.rs
crates/simulate/src/interface/: args.rs
crates/simulate/src/utils/: event.rs  evm.rs  mod.rs
crates/tracing/: Cargo.toml  README.md
crates/tracing/src/: layers.rs  lib.rs
shadowup/: README.md  install  shadowup
