[workspace]
members = [
    "bin/shadow-cli",
    "crates/tracing",
    "crates/config",
    "crates/fetch",
    "crates/common",
    "crates/compile",
    "crates/init",
    "crates/push",
    "crates/clone",
]
default-members = ["bin/shadow-cli"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
description = "???"
version = "0.1.0"
edition = "2021"
homepage = "https://logs.xyz"
repository = "https://github.com/shadow-hq/shadow-cli"
keywords = ["ethereum", "web3", "evm", "shadow"]
exclude = [".github/"]
rust-version = "1.76"
license = "MIT OR Apache-2.0"

[profile.release]
lto = "thin"
strip = "debuginfo"

# Like release, but with full debug symbols. Useful for e.g. `perf`.
[profile.debug-fast]
inherits = "release"
strip = "none"
debug = true

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = "deny"
rustdoc.all = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
branches_sharing_code = "warn"
clear_with_drain = "warn"
derive_partial_eq_without_eq = "warn"
empty_line_after_outer_attr = "warn"
equatable_if_let = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_with_drain = "warn"
large_stack_frames = "warn"
manual_clamp = "warn"
mutex_integer = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
uninhabited_references = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
useless_let_if_seq = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
collection_is_never_read = "allow"
debug_assert_with_mut_call = "allow"
empty_line_after_doc_comments = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
iter_on_single_items = "allow"
missing_const_for_fn = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
string_lit_as_bytes = "allow"
type_repetition_in_bounds = "allow"
unnecessary_struct_initialization = "allow"
use_self = "allow"

[workspace.dependencies]
# Shadow
shadow-cli = { path = "bin/shadow-cli" }
shadow-tracing = { path = "crates/tracing" }
shadow-config = { path = "crates/config" }
shadow-etherscan-fetch = { path = "crates/fetch" }
shadow-common = { path = "crates/common" }
shadow-compile = { path = "crates/compile" }
shadow-init = { path = "crates/init" }
shadow-push = { path = "crates/push" }
shadow-clone = { path = "crates/clone" }

# Crates.io
clap = { version = "4", features = ["derive"] }
eyre = "0.6.12"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "json",
] }
tracing-appender = "0.2.3"
tracing-journald = "0.3"
tracing-logfmt = "0.3.3"
rolling-file = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4.2"
which = "6.0.1"
chrono = { version = "0.4.38", features = ["serde"] }
tempdir = "0.3.7"
alloy-chains = "0.1.23"
walkdir = "2.5.0"
strsim = "0.11.1"
alloy-json-abi = { version = "0.7.6", features = ["serde_json"]}
foundry-block-explorers = { version = "0.5.1", features = ["foundry-compilers"] }
foundry-compilers = { version = "0.10.0", default-features = false }

revm = { git = "https://github.com/bluealloy/revm", tag = "v40", default-features = false, features = [
    "ethersdb",
    "std",
    "serde-json",
    "c-kzg",
    "blst"
]  }
ethers-solc = "2.0.14"
toml = "0.8.15"
rayon = "1.10.0"
hex = "0.4.3"
pinata-sdk = "1.1.0"
alloy = { version = "0.2.0", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
reqwest = "0.12.5"
