[package]
name = "shadow-common"
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
eyre.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
envy.workspace = true
foundry-block-explorers.workspace = true
alloy-chains.workspace = true
tempdir.workspace = true
walkdir.workspace = true
strsim.workspace = true
alloy-json-abi.workspace = true
revm.workspace = true
ethers-solc.workspace = true
toml.workspace = true
chrono.workspace = true
rayon.workspace = true
hex.workspace = true
which.workspace = true
alloy.workspace = true
foundry-compilers.workspace = true
