[package]
name = "shadow-simulate"
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
eyre.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
envy.workspace = true
which.workspace = true
chrono.workspace = true
tempdir.workspace = true
foundry-block-explorers.workspace = true
alloy.workspace = true
alloy-chains.workspace = true
shadow-common.workspace = true
pinata-sdk.workspace = true
revm.workspace = true
walkdir.workspace = true
foundry-evm.workspace = true
hex.workspace = true
