[package]
name = "shadow-tracing"
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace=true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-journald.workspace = true
tracing-logfmt.workspace = true
rolling-file.workspace = true
eyre.workspace = true
tokio.workspace = true
